--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,15 @@
-version=0.002
+version=0.003
 
 name=Sah-Schemas-URL
 
 [Sah::Schemas]
 
 [@Author::PERLANCAR]
-:version=0.52
+:version=0.55
 
 [Prereqs]
+strict=0
+warnings=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
