--- a/dist.ini
+++ b/dist.ini
@@ -15,3 +15,9 @@ warnings=0
 -phase=develop
 -relationship=x_spec
 Sah::Schemas=0.1.0
+
+[Prereqs / TestRequires]
+Data::Sah=0.84
+Data::Sah::Coerce=0.025
+Test::More=0.98
+
